# backend/src/routes/profile.route.ts
@@ -1,13 +1,13 @@
-import express from "express";
-import { ProfileController } from "../controller/profile.controller";
+import express from 'express'
+import { ProfileController } from '../controller/profile.controller'
 
-const router = express.Router();
+const router = express.Router()
 
-const profileRoute = new ProfileController();
+const profileRoute = new ProfileController()
 
-router.get("/profiles", profileRoute.getProfiles);
-router.get("/profiles/:id", profileRoute.getProfileById);
-router.put("/profiles/:id", profileRoute.updateProfile);
-router.delete("/profiles/:id", profileRoute.softDeleteProfile);
+router.get('/profiles', profileRoute.getProfiles)
+router.get('/profiles/:id', profileRoute.getProfileById)
+router.put('/profiles/:id', profileRoute.updateProfile)
+router.delete('/profiles/:id', profileRoute.softDeleteProfile)
 
-export default router;
+export default router
